<resources>
    <string name="app_name">Lock Screen</string>
    <string name="str_preview">Preview</string>
    <string name="enable_screen_lock">Enable/Disable lock screen</string>
    <string name="str_setpin">Set Passcode</string>
    <string name="str_change_pin">Change Passcode</string>
    <string name="str_wall_paper">Lock Screen wallpaper</string>
    <string name="str_title_lock_screen">Click to change lock screen background</string>
    <string name="str_date_format">Date Format</string>
    <string name="str_title_date_format">Select time(24/12) format</string>
    <string name="str_settext_slide">Change Text Slide</string>
    <string name="str_lock_camera">Turn On/Off camera (IOS 9)</string>
    <string name="str_title_lock_camera">Enable camera in lockscreen</string>
    <string name="str_lock_sound">Turn On/Off Sound</string>
    <string name="str_vibration">Turn On/Off Vibration</string>
    <string name="str_share">Share With Friends</string>
    <string name="str_title_share">Share it with your friends</string>
    <string name="str_rate">Rate us</string>
    <string name="wt_setting">Weather Setting</string>
    <string name="str_color_txt">Change Text Color</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="later">Later</string>
    <string name="yes">Yes</string>
    <string name="title_activity_set_pass_code">SetPassCodeActivity</string>
    <string name="title_activity_question_passcode">QuestionPasscodeActivity</string>
    <string name="title_activity_question_changepin">QuestionChangepinActivity</string>
    <string name="title_activity_wallpaper">WallpaperActivity</string>
    <string name="title_activity_set_cpasscode">SetCPasscodeActivity</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_select_wallpaper">SelectWallpaperActivity</string>
    <string name="w_setbg">Set Background Wallpaper</string>
    <string name="w_choose_wall">Choose Wallpaper From Gallery</string>
    <string name="w_choosenewwall">Choose iOS Wallpaper</string>
    <string name="w_cancel">Cancel</string>
    <string name="w_ok">Ok</string>
    <string name="w_wallpaper">Wallpaper</string>
    <string name="p_enterpasscode">Enter Passcode</string>
    <string name="p_clear">Clear</string>
    <string name="p_confirmpass">Confirm Passcode</string>
    <string name="p_setwallpaper">Set wallpaper</string>
    <string name="p_passcurent">Passcode Current</string>
    <string name="loading">--</string>
    <string name="divider_cont_desc">Divider</string>
    <string name="temp_f">Fahrenheit (°F)</string>
    <string name="temp_c">Celcius (°C)</string>
    <string name="emergency">Emergency</string>
    <string name="alert_location">You must choose location on "Weather Setting" when the first install app!!</string>
    <string name="toast_removepasscode">Your Passcode has Removed</string>
    <string name="toast_network">Can not connect to your network</string>
    <string name="toast_locationservice">You must enable Location Service in your device!</string>
    <string name="turn_of_lockscreen">Do you want to disable \"Lock Screen\" after unlock at next time?</string>
    <string name="str_settings">Settings</string>
    <string name="lock_screen_ios9_for_android">Lockscreen Style iOS9</string>
    <string name="rate">Rate our app 5 stars! Thank you so much!</string>
    <string name="please">Please!</string>
    <string name="enter_password">Enter password</string>
    <string name="toash_password_no_correct">Password no correct</string>
    <string name="lock_ios9">Lock Screen IOS 9</string>
    <string name="lock_ios10">Lock Screen IOS 10</string>
</resources>
