<?xml version="1.0" encoding="utf-8"?>
<com.abc.xyz.views.partials.PasscodeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lot_passcode_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/rll_layout_passcode_showhide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:id="@+id/lout_dot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_17sdp">

                <com.abc.xyz.views.widgets.TextviewIPBold
                    android:id="@+id/txv_layout_passcode_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/p_enterpasscode"
                    android:textColor="#ffffffff"
                    android:textSize="@dimen/_14sdp"/>

                <RelativeLayout
                    android:id="@+id/rll_layout_passcode_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_23sdp"
                    android:layout_below="@id/txv_layout_passcode_pass"
                    android:layout_centerHorizontal="true"
                    >

                    <ImageView
                        android:id="@+id/img_layout_passcode_dot1"
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10.0dip"
                        android:src="@drawable/open_dot"/>

                    <ImageView
                        android:id="@+id/img_layout_passcode_dot2"
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10.0dip"
                        android:layout_toRightOf="@id/img_layout_passcode_dot1"
                        android:src="@drawable/open_dot"/>

                    <ImageView
                        android:id="@+id/img_layout_passcode_dot3"
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10.0dip"
                        android:layout_toRightOf="@id/img_layout_passcode_dot2"
                        android:src="@drawable/open_dot"/>

                    <ImageView
                        android:id="@+id/img_layout_passcode_dot4"
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/img_layout_passcode_dot3"
                        android:src="@drawable/open_dot"/>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lout_dot">

                <RelativeLayout
                    android:id="@+id/lot_num_line1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15.0dip">

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num1"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginRight="15.0dip"
                        android:textColor="#ffffffff"
                        app:textNum="1"
                        app:textchar=""/>

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num2"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginRight="15.0dip"
                        android:layout_toRightOf="@id/btn_layout_passcode_num1"
                        android:textColor="#ffffffff"
                        app:textNum="2"
                        app:textchar="abc"/>

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num3"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_toRightOf="@id/btn_layout_passcode_num2"
                        android:textColor="#ffffffff"
                        app:textNum="3"
                        app:textchar="def"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lot_num_line2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lot_num_line1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15.0dip">

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num4"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginRight="15.0dip"
                        android:textColor="#ffffffff"
                        app:textNum="4"
                        app:textchar="ghi"/>

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num5"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginRight="15.0dip"
                        android:layout_toRightOf="@id/btn_layout_passcode_num4"
                        android:textColor="#ffffffff"
                        app:textNum="5"
                        app:textchar="jkl"/>

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num6"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_toRightOf="@id/btn_layout_passcode_num5"
                        android:textColor="#ffffffff"
                        app:textNum="6"
                        app:textchar="mno"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lot_num_line3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lot_num_line2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15.0dip">

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num7"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginRight="15.0dip"
                        android:textColor="#ffffffff"
                        app:textNum="7"
                        app:textchar="pqrs"/>

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num8"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginRight="15.0dip"
                        android:layout_toRightOf="@id/btn_layout_passcode_num7"
                        android:textColor="#ffffffff"
                        app:textNum="8"
                        app:textchar="tuv"/>

                    <com.abc.xyz.views.partials.KeypadItemLayout
                        android:id="@+id/btn_layout_passcode_num9"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_toRightOf="@id/btn_layout_passcode_num8"
                        android:textColor="#ffffffff"
                        app:textNum="9"
                        app:textchar="wxyz"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lot_num_line4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lot_num_line3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15.0dip">

                    <com.abc.xyz.views.widgets.ButtonIPBold
                        android:id="@+id/btn_layout_passcode_num0"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/bg_pressed_keypad"
                        android:text="0"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/_27sdp"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <com.abc.xyz.views.widgets.TextviewIPBold
            android:id="@+id/txv_layout_passcode_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_17sdp"
            android:background="@drawable/bg_border_imagetxv"
            android:padding="10dp"
            android:text="@string/p_clear"
            android:textColor="#ffffffff"
            android:textSize="@dimen/_17sdp"/>

        <com.abc.xyz.views.widgets.TextviewIPBold
            android:id="@+id/txv_layout_passcode_emergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/_17sdp"
            android:background="@drawable/bg_border_imagetxv"
            android:padding="10dp"
            android:text="@string/emergency"
            android:textColor="#ffffffff"
            android:textSize="@dimen/_17sdp"/>
    </RelativeLayout>
</com.abc.xyz.views.partials.PasscodeLayout>